intergrated code from group members files into mine

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seeds": "node seeds/index.js"
   },
-  "repository": { 
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/BigEVK/ArtGarage.git"
   },
@@ -21,11 +21,15 @@
   "homepage": "https://github.com/BigEVK/ArtGarage#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.31.0",
     "connect-session-sequelize": "^7.1.4",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "fs-extra": "^10.1.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.21.4"
   }
 }
