--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "fs-extra": "^10.1.0",
+    "heroku": "^7.63.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.4",
